fixed skills being off center

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1629,7 +1629,7 @@ input, select, textarea {
 
 		.image img {
 			display: block;
-			width: 100%;
+			width: 80px;
 		}
 
 		.image.fit {
@@ -2442,4 +2442,29 @@ input, select, textarea {
 						margin-top: 0;
 					}
 
+	}
+
+	.skillsHolder {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		flex-wrap: wrap;
+		width: 100%;
+		padding: 45px 0 35px 0;
+	}
+
+	.skill {
+		margin: 0 15px 0 15px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.skillText {
+		text-align: center;
+		padding: 5px 0 0 0;
+		margin: 0 0 25px 0;
+		width: 100%;
 	}
